2006-01-12  Lillian Angel  <langel@redhat.com>

	* javax/swing/text/GapContent.java
	(UndoInsertString): Changed name of class to InsertUndo to match the JDK.

2006-01-12  Mark Wielaard  <mark@klomp.org>

	* vm/reference/gnu/java/net/VMPlainSocketImpl.java (connect):
	Throw UnknowHostException when name could not be resolved.

2006-01-12  Jeroen Frijters  <jeroen@frijters.net>

	* java/net/URL.java
	(static, getURLStreamHandler): Use SystemProperties.

2006-01-12  Mark Wielaard  <mark@klomp.org>

	* vm/reference/gnu/java/net/VMPlainDatagramSocketImpl.java (receive):
	Use packet.getLength().
	* native/jni/java-net/gnu_java_net_VMPlainDatagramSocketImpl.c
	(nativeReceive): Check whether the receiver wants zero bytes.

2006-01-12  Mark Wielaard  <mark@klomp.org>

	* native/jni/java-net/javanet.c (_javanet_recvfrom): Return -1 when
	other side orderly closed connection.
	* vm/reference/gnu/java/net/VMPlainSocketImpl.java
	(read(PlainSocketImpl)): Mask byte to return unsigned int. Return -1
	when end of stream reached.

2006-01-12  Mark Wielaard  <mark@klomp.org>

	* native/jni/java-net/gnu_java_net_VMPlainDatagramSocketImpl.c:
	Remove asserts.
	* native/jni/java-net/gnu_java_net_VMPlainSocketImpl.c: Likewise.
	* native/jni/java-net/java_net_VMInetAddress.c: Likewise.
	* native/jni/java-net/java_net_VMNetworkInterface.c: Likewise.
	* native/jni/java-net/javanet.c: Likewise.

2006-01-12  Mark Wielaard  <mark@klomp.org>

	* native/fdlibm/mprec.c (Balloc): Disable assert to workaround
	PR classpath/23863.

2006-01-11  Chris Burdess  <dog@gnu.org>

	* gnu/xml/transform/AttributeNode.java,
	  gnu/xml/transform/ElementNode.java,
	  gnu/xml/transform/LiteralNode.java,
	  gnu/xml/transform/StreamSerializer.java,
	  gnu/xml/transform/StrippingInstruction.java,
	  gnu/xml/transform/Stylesheet.java,
	  gnu/xml/transform/TransformerImpl.java,
	  gnu/xml/transform/ValueOfNode.java,
	  gnu/xml/xpath/Expr.java,
	  gnu/xml/xpath/LocalNameFunction.java,